# dlc-stack

./: .gitignore  Cargo.toml  docker-compose.yml  justfile  regtest.patch
.github/workflows/: docker-build-dev.yml  docker-build-pr.yml  docker-build-tagged.yml  docker-build.yml
attestor/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.fromBase  README.md  build.sh  check.sh  config.yaml  docker-compose.yml  events.json  justfile  nonstx.txt  package-lock.json  package.json  tsconfig.json
attestor-client/: Cargo.toml
attestor-client/src/: lib.rs
attestor/config/: secret2.key  secret3.key
attestor/observer/: .env.template  build_all.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
attestor/observer_new/: package-lock.json  package.json  tsconfig.json  webpack.config.js
attestor/src/: error.rs  lib.rs  main.rs
clients/: Cargo.toml
clients/src/: async_storage_provider.rs  lib.rs
dlc-link-manager/: Cargo.toml
dlc-wallet/: Cargo.toml
docker/: Dockerfile  Dockerfile.base
esplora-async-blockchain-provider-js-wallet/: Cargo.toml
esplora-async-blockchain-provider-router-wallet/: Cargo.toml
it/: Dockerfile  Dockerfile.fromBase  attestor-config.yaml  docker-compose.yml  index.js  justfile  package-lock.json  package.json  wallet-config.yaml
js-interface-wallet/: Cargo.toml
storage/: Dockerfile.fromBase
wallet/: .env.template  Cargo.toml  Dockerfile  Dockerfile.fromBase  README.md  config.yaml  create_cert.sh  docker-compose.yml  justfile
wallet-blockchain-interface/: package-lock.json  package.json
wasm-wallet/: Cargo.toml
(+129 files in other folders)
