[package]
name = "dlc-clients"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.1"
dlc-link-manager = { path = "../dlc-link-manager" }
dlc-manager = { git = "https://github.com/dlc-link/rust-dlc", rev= "bd71461", features = ["use-serde"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking", "json"]}
serde = {version = "*", features = ["derive"]}
bitcoin = { version = "0.29.2", features = ["serde"] }
secp256k1 = {version = "0.28.0", features = ["rand-std", "hashes-std"]}
serde_json = "1.0.81"
actix-web = "4"
actix-http = "3.4.0"
actix-cors = "0.6.4"
mockito = "1.2.0"
secp256k1-zkp = { version = "0.7.0", features = [
  "bitcoin_hashes",
  "global-context",
  "rand",
  "rand-std",
  "serde",
] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
